--- a/_includes/test-module.html
+++ b/_includes/test-module.html
@@ -1,4 +1,4 @@
-<article class="tech-tree-module tech-tree-module--type-{{ include.type }} {{ include.class }}" data-type="{{ include.type }}">
+<article class="tech-tree-module bg--type-{{ include.type }} {{ include.class }}" data-type="{{ include.type }}">
   <div class="tech-tree-module__content">
     <header class="tech-tree-module__header">
       <aside class="tech-tree-module__lock-status">
@@ -10,7 +10,6 @@
     </section>
     <progress class="tech-tree-module__progress" max="5" value="{{ include.progress }}"></progress>
   </div>
-
 
   <aside class="tech-tree-module__overlay">
     <h1 class="tech-tree-module__overlay__header">The Problem We’re Solving</h1>
