--- a/_includes/head.html
+++ b/_includes/head.html
@@ -269,10 +269,30 @@
       $('.tech-tree-module').click(
         function() {
           $(".tech-tree-module__overlay").removeClass("tech-tree-module__overlay--active");
-          $(this).find(".tech-tree-module__overlay").addClass("tech-tree-module__overlay--active");
+
+          viewport_center_x = Math.floor(window.innerWidth/2);
+          offset_left = $(this).offset().left;
+          target = $(this).find(".tech-tree-module__overlay");
+          target.addClass("tech-tree-module__overlay--active");
+          console.log(offset_left);
+          console.log(offset_left - 10 - target.width());
+
+          if ( offset_left < viewport_center_x ) {
+            target.offset({ left: ( offset_left + 108 ) });
+          } else {
+            target.offset({ left: ( offset_left - 10 - target.width() ) });
+          }
+
+          $(".cover-all").show();
         }
       );
 
+      $(".cover-all").click(
+        function() {
+          $(".tech-tree-module__overlay").removeClass("tech-tree-module__overlay--active");
+          $(this).hide();
+        }
+      );
     });
   </script>
 </head>
