--- a/_sass/_base0.scss
+++ b/_sass/_base0.scss
@@ -6,19 +6,20 @@ $color-b: #8E60D7;
 $color-c: #E85770;
 $color-d: #5BC672;
 
+$color-a--faded: rgba($color-a, 0.4);
+$color-b--faded: rgba($color-b, 0.4);
+$color-c--faded: rgba($color-c, 0.4);
+$color-d--faded: rgba($color-d, 0.4);
+
 $color-ghost-black-base:  rgba(0,0,0,0.5);
 $color-ghost-black-light: rgba(0,0,0,0.3);
-$color-text-light: #F7F7F7;
+$color-text-light:     #F7F7F7;
+$color-link-highlight: #00BCFF;
 
 $transition-speed-fast:    0.2s;
 $transition-speed-medium:  0.4s;
 $transition-speed-slow:    0.8s;
 $transition-speed-default: $transition-speed-fast;
-
-$color-a--faded: rgba($color-a, 0.4);
-$color-b--faded: rgba($color-b, 0.4);
-$color-c--faded: rgba($color-c, 0.4);
-$color-d--faded: rgba($color-d, 0.4);
 
 $bg_color: #2D3E50;
 
@@ -28,6 +29,8 @@ body {
 }
 
 .tech-tree {
+  margin-top: 20px;
+
   &__level {
     @extend %grid !optional;
   }
@@ -38,7 +41,7 @@ connection {
   color: $color-ghost-black-base;
   border-radius: 40px;
   pointer-events: none;
-  opacity: 0.4;
+  opacity: 0.3;
   transition: all $transition-speed-medium ease-out;
 
   &.connection--dark { opacity: 1.0; }
@@ -52,25 +55,25 @@ connection {
   @extend %g, %_2-16 !optional;
   height: 100px;
   margin-top: $tech-tree-module-vertical-space-between;
-  position: relative;
   background-color: white;
   border-radius: 6px;
   box-shadow: 0 3px 8px $color-ghost-black-light;
-  transition: all $transition-speed-default ease-out;
+  transition: box-shadow $transition-speed-default ease-out;
+  position: relative;
 
   &__overlay {
-    transition: all $transition-speed-default ease-out;
-    position: absolute;
-    @extend %g, %_6-16 !optional;
+    position: fixed;
+    @extend %g, %_8-16 !optional;
     display: none;
-    left: 80px;
-    top: 0;
+    top:    10px;
+    bottom: 10px;
+    margin-left: $grid_width * 2 - ($grid_gutter / 2);
     background-color: $color-text-light;
     border-radius: 6px;
 
     &--active {
       display: block;
-      z-index: 1;
+      z-index: 2;
     }
 
     h1 {
@@ -94,8 +97,9 @@ connection {
 
   &:hover {
     cursor: pointer;
-    z-index: 1;
-    transform: scale(1.1);
+    z-index: 2;
+    box-shadow: 0 0 0px 5px $color-link-highlight;
+    opacity: 1.0;
   }
 
   &__header{
@@ -109,11 +113,38 @@ connection {
   &__progress{
     width: auto;
     display: block;
-    height: 1.2em;
+    height: 0.5rem;
+    margin-bottom: 0.25rem;
+    -webkit-appearance: none;
+    border: none;
+
+    &::-webkit-progress-bar {
+    	background: $color-ghost-black-light;
+    	border-radius: 2px;
+    	padding: 1px;
+    }
+
+    &::-webkit-progress-value {
+    	background: $color-link-highlight;
+      border-radius: 2px;
+    }
   }
 }
+
+
 
 .bg--type-a { background-color: $color-a; }
 .bg--type-b { background-color: $color-b; }
 .bg--type-c { background-color: $color-c; }
 .bg--type-d { background-color: $color-d; }
+
+.cover-all {
+  background-color: $color-ghost-black-base;
+  position: absolute;
+  left:   0;
+  right:  0;
+  top:    0;
+  bottom: 0;
+  z-index: 1;
+  display: none;
+}
