--- a/_sass/_base0.scss
+++ b/_sass/_base0.scss
@@ -61,6 +61,54 @@ connection {
   transition: box-shadow $transition-speed-default ease-out;
   position: relative;
 
+  &__content{
+    color: $color-text-light;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    height: 100%;
+    padding: 0.25rem;
+
+    &:hover { cursor: pointer; }
+  }
+
+  &:hover {
+    z-index: 2;
+    box-shadow: 0 0 0px 5px $color-link-highlight;
+    opacity: 1.0;
+  }
+
+  &__header{
+    height: 26px;
+  }
+
+  &__footer {
+    display: flex;
+    align-items: center;
+  }
+
+  &__identifier {
+    font-size: 0.8rem;
+    text-align: center;
+  }
+  &__progress{
+    height: 0.5rem;
+    -webkit-appearance: none;
+    border: none;
+    margin-left: 0.25rem;
+
+    &::-webkit-progress-bar {
+    	background: $color-ghost-black-light;
+    	border-radius: 2px;
+    	padding: 1px;
+    }
+
+    &::-webkit-progress-value {
+    	background: $color-link-highlight;
+      border-radius: 2px;
+    }
+  }
+
   &__overlay {
     position: fixed;
     @extend %g, %_8-16 !optional;
@@ -84,58 +132,15 @@ connection {
       margin: 0;
     }
   }
-
-  &__content{
-    color: $color-text-light;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    height: 100%;
-    margin-left: 5px;
-    margin-right: 5px;
-  }
-
-  &:hover {
-    cursor: pointer;
-    z-index: 2;
-    box-shadow: 0 0 0px 5px $color-link-highlight;
-    opacity: 1.0;
-  }
-
-  &__header{
-    height: 26px;
-  }
-
-  &__identifier {
-    font-size: 0.8rem;
-    text-align: center;
-  }
-  &__progress{
-    width: auto;
-    display: block;
-    height: 0.5rem;
-    margin-bottom: 0.25rem;
-    -webkit-appearance: none;
-    border: none;
-
-    &::-webkit-progress-bar {
-    	background: $color-ghost-black-light;
-    	border-radius: 2px;
-    	padding: 1px;
-    }
-
-    &::-webkit-progress-value {
-    	background: $color-link-highlight;
-      border-radius: 2px;
-    }
-  }
 }
 
-
-
+.bg--type-blue,
 .bg--type-a { background-color: $color-a; }
+.bg--type-purple,
 .bg--type-b { background-color: $color-b; }
+.bg--type-red,
 .bg--type-c { background-color: $color-c; }
+.bg--type-green,
 .bg--type-d { background-color: $color-d; }
 
 .cover-all {
